tests/paczka2/big_fuzzy/95773563.err
Error in line 6: A343 S85I 20,5
Error in line 3: i7rtzi A920 69,4
Error in line 2: A343 A920 53,6
Error in line 11: A343 S856 92,0
Error in line 30: 6yTwNMxS856301,1
Error in line 33: i7rtzi A343 6,9
Error in line 49: i7rtzi A920 272,09
Error in line 53: 5PgUpVMR S517 35,2
Error in line 56: 5PgUpVMR A920 8,7
Error in line 62: R1TtiqF0 S856 87,4
Error in line 73: i7rtzi A920 198,1
Error in line 78: i7rtzi A343 49,7
Error in line 80: A343 A343 -2,58
Error in line 77: 5PgUpVMR S517 8,0
Error in line 76: A343 A343 61,4
Error in line 75: 9fGsZ34CH S517 199,0
Error in line 101: LUjoYCh S517 58,8
Error in line 104: A343 A920 39,1
Error in line 125: i7rtzi S517 36,6
Error in line 130: LUjoYCh S517 83,8
Error in line 143: i7rtzi S856 80,1
Error in line 148: LUjoYCh A920 4,9
Error in line 149: i7rtzi A920 60,8
Error in line 153: i7rtzi A20 57,8
Error in line 163: LUjoYCh A343 24,8
Error in line 161: A343 S517 43,9
Error in line 152: R1TtiqF0 A920 330,3
Error in line 171: 6yTwNMx A343 55,2
Error in line 186: i7rtzi S517 -1,4
Error in line 181: R1TtiqF0 S517 56,6
Error in line 185: LUjoYCh S517 53,5
Error in line 194: 5PgUpVMR S856 71,8
Error in line 198: 5PgUpVMR A920 3,9
Error in line 191: 6yTwNMx A343 96,2
Error in line 203: A343 A920 98,0
Error in line 207: A343 S517 76,3
Error in line 223: i7rtzi A343 220,6
Error in line 199: R1TtiqF0 A343 1,4
Error in line 239: LUjoYCh A343 83,5
